# jetbot-ros-speech-control

./: README.md
jetbot_ros/launch/: jetbot_motor.launch
jetbot_ros/scripts/: jetbot_motors.py
speech_control_1/: CMakeLists.txt  package.xml
speech_control_1/launch/: speech_command.launch
speech_control_1/src/: speech_command.py
